--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.2.1",
-    "@prisma/client": "^4.14.1",
+    "@fastify/jwt": "^7.0.0",
+    "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
     "fastify": "^4.17.0",
     "uuid": "^9.0.0",
